<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/rmabrown"
    tools:context=".view.CharDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/arrowBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/arrow_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/charNametw"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/avenir_title"
                    android:text="Abandango Cluster Princess"
                    android:textColor="@color/rmagreen"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/arrowBack"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/charImage"
                android:layout_width="275dp"
                android:layout_height="275dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="20dp"
                android:src="@drawable/rick" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/charStatusTitle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:fontFamily="@font/avenir_title"
                        android:text="@string/StatusTitle"
                        android:textColor="@color/rmagreen"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/charStatusDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/avenir_desc"
                        android:text="deneme"
                        android:textColor="@color/rmagreen"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/charSpecyTitle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:fontFamily="@font/avenir_title"
                        android:text="@string/SpecyTitle"
                        android:textColor="@color/rmagreen"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/charSpecyDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/avenir_desc"
                        android:text="deneme"
                        android:textColor="@color/rmagreen"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/charGenderTitle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:fontFamily="@font/avenir_title"
                        android:text="@string/GenderTitle"
                        android:textColor="@color/rmagreen"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/charGenderDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/avenir_desc"
                        android:text="deneme"
                        android:textColor="@color/rmagreen"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/charOriginTitle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:fontFamily="@font/avenir_title"
                        android:text="@string/OriginTitle"
                        android:textColor="@color/rmagreen"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/charOriginDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/avenir_desc"
                        android:text="deneme"
                        android:textColor="@color/rmagreen"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/charLocationTitle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:fontFamily="@font/avenir_title"
                        android:text="@string/LocationTitle"
                        android:textColor="@color/rmagreen"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/charLocationDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/avenir_desc"
                        android:text="deneme"
                        android:textColor="@color/rmagreen"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/charEpisodesTitle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:fontFamily="@font/avenir_title"
                        android:text="@string/EpisodesTitle"
                        android:textColor="@color/rmagreen"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/charEpisodesDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/avenir_desc"
                        android:text="deneme"
                        android:textColor="@color/rmagreen"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/charCreatedTitle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:ellipsize="end"
                        android:fontFamily="@font/avenir_title"
                        android:text="@string/CreatedAtTitle"
                        android:textColor="@color/rmagreen"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/charCreatedDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/avenir_desc"
                        android:text="deneme"
                        android:textColor="@color/rmagreen"
                        android:layout_gravity = "center"
                        android:textSize="22sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>